# phynity

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  HARDENING_PLAN.md  PHASE3_IMPLEMENTATION.md  README.md  SERIALIZATION_QUICKSTART.md  vcpkg.json
sandbox/: CMakeLists.txt  demo_scenarios.cpp  demo_scenarios.hpp  main.cpp  physics_context.cpp  physics_context.hpp  sandbox_app.cpp  sandbox_app.hpp
src/app/: CMakeLists.txt  demo_scenarios.cpp  demo_scenarios.hpp  main.cpp  physics_context.cpp  physics_context.hpp  rigid_body_demos.hpp
src/core/: CMakeLists.txt
src/core/diagnostics/: collision_monitor.hpp  console_output.hpp  energy_monitor.hpp  frame_budget.hpp  frame_profiler.hpp  momentum_monitor.hpp  physics_diagnostics_hub.hpp  profiler.hpp  profiling_macros.hpp  timer.hpp
src/core/jobs/: counter.hpp  eventcount.hpp  job.hpp  job_graph.hpp  job_handle.hpp  job_id.hpp  job_pool.hpp  job_queue.hpp  job_system.cpp  job_system.hpp  schedule_recorder.cpp  schedule_recorder.hpp  schedule_replayer.cpp  schedule_replayer.hpp  schedule_schema.hpp  task_executor.cpp  task_executor.hpp  task_graph.cpp  task_graph.hpp  task_graph_builder.hpp  task_id.hpp  task_schedule.hpp  task_scheduler.cpp  task_scheduler.hpp  work_stealing_deque.hpp
src/core/math/: vec3.hpp
src/core/math/calculus/: README.md  curve_fitting.hpp  finite_differences.hpp  integrators.hpp
src/core/math/linear_algebra/: README.md  cholesky_decomposition.hpp  lu_decomposition.hpp  qr_decomposition.hpp  solver.hpp  svd_decomposition.hpp
src/core/math/matrices/: README.md  mat2.hpp  mat3.hpp  mat4.hpp  mat_dynamic.hpp  mat_n.hpp
src/core/math/quaternions/: README.md  conversion_formulas.txt  quat.hpp  quat_conversions.hpp  quat_interpolation.hpp
src/core/math/utilities/: README.md  comparison_utils.hpp  constants.hpp  conversions.hpp  float_comparison.hpp  geometry.hpp  numeric.hpp  trigonometry.hpp  validity_checks.hpp
src/core/math/vectors/: README.md  vec2.hpp  vec3.hpp  vec4.hpp  vec_dynamic.hpp  vec_n.hpp
src/core/memory/: thread_safe_arena.hpp
src/core/physics/: force_field.hpp  material.hpp  particle.cpp  particle.hpp  particle_system.cpp  particle_system.hpp  physics_constants.hpp  rigid_body.hpp  rigid_body_system.hpp  timestep_controller.hpp
src/core/physics/collision/: aabb.hpp  aabb_narrowphase.hpp  collision_proxy.hpp  contact_cache.hpp  contact_manifold.hpp  convex_hull.hpp  epa_solver.hpp  gjk_solver.hpp  impulse_resolver.hpp  pgs_solver.hpp  sat_solver.hpp  shape_base.hpp  shape_factory.hpp  spatial_grid.hpp  spatial_grid_hash.hpp  sphere_collider.hpp  sphere_sphere_narrowphase.hpp  support_function.hpp
src/core/physics/common/: ccd_config.hpp  force_field.cpp  force_field.hpp  material.cpp  material.hpp  physics_constants.hpp  timestep_controller.cpp  timestep_controller.hpp
src/core/physics/config/: ccd_config.hpp  timestep_controller.hpp
src/core/physics/constraints/: body.hpp  constraint.hpp  constraint_graph.cpp  constraint_graph.hpp  constraint_solver.hpp  contact_constraint.hpp  fixed_constraint.hpp  fixed_constraint_rb.hpp  fixed_joint.hpp  fixed_joint_rb.hpp  hinge_joint.hpp  hinge_joint_rb.hpp  pivot_joint.hpp  weld_joint.hpp
src/core/physics/dynamics/: force_field.hpp  (+1 more)
src/core/serialization/: replay_reader.cpp  replay_reader.hpp  replay_schema.hpp  replay_writer.cpp  replay_writer.hpp  simulation_timeline.cpp  simulation_timeline.hpp  snapshot_helpers.cpp  snapshot_helpers.hpp  snapshot_migration.cpp  snapshot_migration.hpp  snapshot_schema.cpp  snapshot_schema.hpp  snapshot_serializer.cpp  snapshot_serializer.hpp
src/platform/: CMakeLists.txt  allocation_tracker.hpp  memory_usage.hpp  thread_affinity.hpp  threading.hpp
src/render/: .clang-tidy  CMakeLists.txt  body_inspector.cpp  body_inspector.hpp  camera.cpp  camera.hpp  constraint_inspector.cpp  constraint_inspector.hpp  debug_hud.cpp  debug_hud.hpp  help_overlay.cpp  help_overlay.hpp  imgui_context.cpp  imgui_context.hpp  picking.cpp  picking.hpp  scene_renderer.cpp  scene_renderer.hpp  timeline_scrubber.cpp  timeline_scrubber.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt
tests/UnitTests/core/: CMakeLists.txt
tests/ValidationTests/: CMakeLists.txt  broadphase_correctness_validation_test.cpp  broadphase_performance_benchmark_test.cpp  integration_test_harness.hpp  integration_test_harness_test.cpp  physics_validation_test.cpp  profiler_overhead_benchmark.cpp
tests/ValidationTests/diagnostics/: CMakeLists.txt  diagnostics_golden_test.cpp  profiler_overhead_benchmark.cpp
tests/ValidationTests/math/: CMakeLists.txt  math_golden_test.cpp
tests/ValidationTests/performance/: CMakeLists.txt  ccd_performance_test.cpp  collision_regression_test.cpp  kernel_and_scene_performance_test.cpp
tests/ValidationTests/physics/: CMakeLists.txt
tests/ValidationTests/serialization/: CMakeLists.txt  replay_round_trip_test.cpp  serialization_round_trip_test.cpp
tests/core/: CMakeLists.txt  particle_test.cpp  vec3_test.cpp
tests/core/math/: CMakeLists.txt
tests/core/matrices/: CMakeLists.txt  mat2_test.cpp  mat3_test.cpp  mat4_test.cpp  mat_dynamic_test.cpp  mat_n_test.cpp
tests/core/physics/: CMakeLists.txt  particle_test.cpp
tests/core/quaternions/: CMakeLists.txt  quat_conversions_test.cpp  quat_interpolation_test.cpp  quat_test.cpp
tests/core/vectors/: vec2_test.cpp  vec3_test.cpp  vec4_test.cpp  vec_dynamic_test.cpp  vec_n_test.cpp
tests/golden_outputs/: README.md
tests/golden_outputs/diagnostics/: monitors_basics.golden
tests/golden_outputs/performance/: broadphase.current.json  broadphase.json  complex_deterministic_scene.current.json  complex_deterministic_scene.json  gjk.current.json  gjk.json  particle_integration_kernel.current.json  particle_integration_kernel.json  solver.current.json  solver.json  thresholds.json
tests/golden_outputs/serialization/: particle_snapshot_v0_9.json  particle_snapshot_v1_0.json  particle_snapshot_v1_1.json
tests/test_utils/: golden_serializer.hpp  physics_test_helpers.hpp  timing_profile.hpp
(+282 files in other folders)
