# Diagnostics tests

add_executable(timer_test timer_test.cpp)
phynity_target_defaults(timer_test)
phynity_apply_warnings(timer_test)
phynity_apply_sanitizers(timer_test)
target_link_libraries(timer_test PRIVATE phynity::tests Catch2::Catch2WithMain)
add_test(NAME unit.diagnostics.timer COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:timer_test>)

add_executable(profiler_test profiler_test.cpp)
phynity_target_defaults(profiler_test)
phynity_apply_warnings(profiler_test)
phynity_apply_sanitizers(profiler_test)
target_link_libraries(profiler_test PRIVATE phynity::tests Catch2::Catch2WithMain)
add_test(NAME unit.diagnostics.profiler COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:profiler_test>)

add_executable(frame_profiler_test frame_profiler_test.cpp)
phynity_target_defaults(frame_profiler_test)
phynity_apply_warnings(frame_profiler_test)
phynity_apply_sanitizers(frame_profiler_test)
target_link_libraries(frame_profiler_test PRIVATE phynity::tests Catch2::Catch2WithMain)
add_test(NAME unit.diagnostics.frame_profiler COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:frame_profiler_test>)

add_executable(frame_budget_test frame_budget_test.cpp)
phynity_target_defaults(frame_budget_test)
phynity_apply_warnings(frame_budget_test)
phynity_apply_sanitizers(frame_budget_test)
target_link_libraries(frame_budget_test PRIVATE phynity::tests Catch2::Catch2WithMain)
add_test(NAME unit.diagnostics.frame_budget COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:frame_budget_test>)

add_executable(energy_monitor_test energy_monitor_test.cpp)
phynity_target_defaults(energy_monitor_test)
phynity_apply_warnings(energy_monitor_test)
phynity_apply_sanitizers(energy_monitor_test)
target_link_libraries(energy_monitor_test PRIVATE phynity::tests Catch2::Catch2WithMain)
add_test(NAME unit.diagnostics.energy_monitor COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:energy_monitor_test>)

add_executable(momentum_monitor_test momentum_monitor_test.cpp)
phynity_target_defaults(momentum_monitor_test)
phynity_apply_warnings(momentum_monitor_test)
phynity_apply_sanitizers(momentum_monitor_test)
target_link_libraries(momentum_monitor_test PRIVATE phynity::tests Catch2::Catch2WithMain)
add_test(NAME unit.diagnostics.momentum_monitor COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:momentum_monitor_test>)

add_executable(collision_monitor_test collision_monitor_test.cpp)
phynity_target_defaults(collision_monitor_test)
phynity_apply_warnings(collision_monitor_test)
phynity_apply_sanitizers(collision_monitor_test)
target_link_libraries(collision_monitor_test PRIVATE phynity::tests Catch2::Catch2WithMain)
add_test(NAME unit.diagnostics.collision_monitor COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:collision_monitor_test>)
